--- a/squirrel/sightings/templates/sightings/all.html
+++ b/squirrel/sightings/templates/sightings/all.html
@@ -1,5 +1,34 @@
-<ul>
-  {% for pet in pets %}
-    <li>{{ pet.name }}</li>
-  {% endfor %}
-</ul>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+
+<style>
+    body{
+        text-align: center;
+    }
+
+    .table-class table{
+        margin: 0px auto;
+        width: 30%;
+        height: 100px;
+        border-width: 1px; 
+        border-collapse: collapse;
+    }
+</style>
+
+<body>
+    <p>Central Park Squirrel Sightings</p>
+    <div class="table-class">
+	    <a href="http://104.154.140.23/sightings/add">Click to add sightings view</a>
+        <table width="400" border="1px">
+		<tr><td width="181">ID</td><td width="181">Latitude</td><td width="181">Longtitude</td><td width="181">Shift</td><td width="181">Date</td><td width="181">Age</td><td width="181">Primary Fur Color</td><td width="181">Location</td><td width="181">Specific Location</td><td width="181">Running</td><td width="181">Chasing</td><td width="181">Climbing</td><td width="181">Eating</td><td width="181">Foraging</td><td width="181">Other Activities</td><td width="181">Kuks</td><td width="181">Quaas</td><td width="181">Moans</td><td width="181">Tail flags</td><td width="181">Tail twitches</td><td width="181">Approaches</td><td width="181">Indifferent</td><td width="181">Runs from</td></tr>
+	      {% for item in squirrels %} 
+	      <tr><td><a href="http://104.154.140.23/sightings/{{ item.uniqueid }}">{{ item.uniqueid }}</a></td><td>{{ item.latitude }}</td><td>{{ item.longitude }}</td><td>{{ item.shift }}</td><td>{{ item.Date }}</td><td>{{ item.Age }}</td><td>{{ item.furcolor }}</td><td>{{ item.location }}</td><td>{{ item.specificlocation }}</td><td>{{ item.running }}</td><td>{{ item.chasing }}</td><td>{{ item.climbing }}</td><td>{{ item.eating }}</td><td>{{ item.foraging }}</td><td>{{ item.otheractivities }}</td><td>{{ item.kuks }}</td><td>{{ item.quaas }}</td><td>{{ item.moans }}</td><td>{{ item.tailflags }}</td><td>{{ item.tailtwitches }}</td><td>{{ item.approaches }}</td><td>{{ item.indifferent }}</td><td>{{ item.runsfrom }}</td></tr>
+	      {% endfor %}
+        </table>
+    </div>
+</body>
+</html>
+
